# opensolve-pipe

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md
.claude/: README.md  (+2 more)
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml  railway.json
apps/api/src/opensolve_pipe/: __init__.py  main.py
apps/api/src/opensolve_pipe/data/: __init__.py  fittings.json  fluids.json  pipe_materials.json
apps/api/src/opensolve_pipe/models/: __init__.py  base.py  branch.py  components.py  connections.py  fluids.py  piping.py  plug.py  ports.py  project.py  pump.py  reference_node.py  results.py  units.py
apps/api/src/opensolve_pipe/protocols/: __init__.py  components.py  fluids.py  solver.py
apps/api/src/opensolve_pipe/routers/: __init__.py  fluids.py  solve.py
apps/api/src/opensolve_pipe/services/: __init__.py  data.py  fluids.py
apps/api/src/opensolve_pipe/utils/: __init__.py  units.py
apps/api/tests/: conftest.py
apps/api/tests/models/: test_branch.py  test_plug.py  test_reference_node.py
apps/api/tests/test_models/: __init__.py  conftest.py  test_components.py  test_connections.py  test_fluids.py  test_piping.py  test_ports.py  test_project.py  test_pump.py  test_results.py  test_units.py
apps/api/tests/test_protocols/: __init__.py  test_head_loss_calculator.py  test_head_source.py  test_imports.py  test_network_solver.py
apps/api/tests/test_routers/: test_fluids.py  test_solve.py
apps/api/tests/test_services/: test_data.py  test_fluids.py
apps/api/tests/test_services/test_solver/: __init__.py  test_complex_networks.py  test_epanet.py  test_epanet_comprehensive.py  test_friction.py  test_k_factors.py  test_looped_solver.py  test_network.py  test_pump_status.py  test_simple.py  test_valve_status.py  test_vfd_pump.py  (+2 more)
apps/api/tests/test_utils/: __init__.py  test_units.py
(+222 files in other folders)
