[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opensolve-pipe"
version = "0.1.0"
description = "Hydraulic network analysis API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "OpenSolve Team" }
]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
    "pydantic>=2.10.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "fluids>=1.0.0,<2.0.0",
    "scipy>=1.14.0,<2.0.0",
    "numpy>=2.0.0,<3.0.0",
    "wntr>=1.2.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opensolve_pipe"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-ra", "-q", "--strict-markers"]

[tool.coverage.run]
source = ["src/opensolve_pipe"]
branch = true

[tool.coverage.report]
# Note: Lowered from 93% due to epanet.py (55% coverage). Issue #140 to improve.
fail_under = 85
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "TCH", "RUF"]
ignore = ["E501", "B008", "TCH001"]  # TCH001: Pydantic models need runtime imports

[tool.ruff.lint.isort]
known-first-party = ["opensolve_pipe"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["fluids.*", "scipy.*", "wntr.*"]
ignore_missing_imports = true
